--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             </nav>
             <div class="header-text">
                 <p>UI/UX Designer</p>
-                <h1>Hi, I'm <span>Ankit</span><br>From India</h1>
+                <h1>Hi, I'm <span>Ankit</span><br></h1><br>
+                <h2>Welcome to my Portfolio site</h2>
             </div>
         </div>
     </div>
