--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo2.png" class="logo">
+                <a href="#header"><img src="images/logo2.png" class="logo"></a>
+                
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -27,7 +28,7 @@
                 <i class="fas fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>UI/UX Designer</p>
+                <p>Web Developer</p>
                 <h1>Hi, I'm <span>Ankit</span><br></h1><br>
                 <h2>Welcome to my Portfolio site</h2>
             </div>
@@ -42,15 +43,9 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title" style="margin: 20px 0 20px 0;">About Me</h1>
-                    <p style="color: #ababab;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit assumenda soluta quis totam
-                        ratione aliquam omnis, aliquid cum et exercitationem nesciunt quam at natus corrupti rerum
-                        numquam tenetur? Sint, hic vitae ad ipsum accusamus earum qui soluta rerum! Praesentium
-                        explicabo atque tempore, sed dignissimos obcaecati reiciendis laboriosam veniam ipsum
-                        repudiandae minima assumenda libero quisquam nesciunt illum qui velit, esse eveniet numquam?
-                        Accusantium minima dolore voluptate aspernatur reprehenderit numquam ipsum, aut, dolorum est
-                        illum debitis possimus, excepturi sequi ad voluptatibus? Quidem possimus distinctio laborum,
-                        numquam fuga non placeat beatae ipsa obcaecati eum quo, odio incidunt corporis architecto magnam
-                        quaerat! Dolorum, aperiam.</p>
+                    <p style="color: #ababab;">Hello Everyone!!<br> My name is Ankit Sharma.<br>This is my first website built with the help of HTML,CSS and JS.<br>
+                    I am currently pursuing Btech(CSE) from Lovely Professional University (Jalandhar).<br>
+                    I am a intermediate in web Development and learnig different technologies to cope up with this fast evolving industry.</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -68,17 +63,15 @@
                     <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>2022 - Current</span><br>UI/UX Design training at LPU</li>
-                            <li><span>2020 - 2022</span><br>Team Lead at StarApp LLC.</li>
-                            <li><span>2018 - 2020</span><br>Design executive at Coin Digital Ltd.</li>
-                            <li><span>2017 - 2018</span><br>Internship at Ekart eCommerce</li>
+                            <li><span>2020 - 2022</span><br>Web Delevopment training at LPU</li>
                         </ul>
                     </div>
 
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2016</span><br>UI/UX Design Training at LPU</li>
-                            <li><span>2015</span><br>MBA from MIT Bangalore</li>
-                            <li><span>2014</span><br>Btech from IIT Delhi</li>
+                            <li><span>2024</span><br>Btech in CSE from Lovely Professional University (Jalandhar)</li>
+                            <li><span>2020</span><br>Intermediate from M.B Public School (Gaya)</li>
+                            <li><span>2018</span><br>Matriculation from Delhi Public School (Gaya)</li>
                         </ul>
                     </div>
                 </div>
@@ -136,8 +129,7 @@
                     <img src="images/work-2.png">
                     <div class="layer">
                         <h3>Music App</h3>
-                        <p>The app connects you to the talented people around the world.<br>Download it now from the
-                            play store. </p>
+                        <p>A mobile phone application that allows you to listen to music files stored in the phone's internal or external memory.<br>Download now!!</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
@@ -145,8 +137,8 @@
                     <img src="images/work-3.png">
                     <div class="layer">
                         <h3>Online Shopping App</h3>
-                        <p>The app connects you to the talented people around the world.<br>Download it now from the
-                            play store. </p>
+                        <p>What is an online shopping app?
+                            A mobile shopping app is an application that allows customers to browse and buy products or services from a retailer or service provider. <br>Download now!!</p>
                         <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
