--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
                     <p><i class="fa-solid fa-phone"></i>  6202590154</p>
                     <div class="social-icons">
                         <a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="https://instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://twitter.com/"><i class="fa-brands fa-twitter-square"></i></a>
+                        <a href="https://instagram.com/__ankit007__"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://linkedin.com/in/ankit-sharma-796b6a201"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://twitter.com/__ankit007__"><i class="fa-brands fa-twitter-square"></i></a>
                     </div>
                     <a href="images/my cv ankit sharma.pdf" download class="btn btn2">Download CV</a>
                 </div>
